--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                                 
                                 <div>
                                     <h3 class="testimonial__name">Kuya Bapbi</h3>
-                                    <span class="testimonial__client">Help Desk Technician</span>
+                                    <span class="testimonial__client">Client</span>
                                 </div>
                             </div>
                             <div>
@@ -755,7 +755,7 @@
                                 
                                 <div>
                                     <h3 class="testimonial__name">Bapbi</h3>
-                                    <span class="testimonial__client">Systems Administrator</span>
+                                    <span class="testimonial__client">Client</span>
                                 </div>
                             </div>
                             <div>
