--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Harvey</h1>
                             <h3 class="home__subtitle">IT Student</h3>
-                            <p class="home__description"> I am Harvey, an enthusiastic IT student specializing in network administration.
+                            <p class="home__description">an enthusiastic IT student specializing in network administration.
                                 This portfolio showcases my projects, skills, and passion for technology.
                                 I’m excited to share my journey in building and troubleshooting networks, and I invite you to explore my work. Let’s connect!</p>
                             <a href="#contact" class="button button--flex home__button">
@@ -135,7 +135,7 @@
                     <img src="packages/images/profile-2.jpeg" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
-                            specializing in Network Administration. With a passion for building secure and efficient networks,
+                            I am Harvey, specializing in Network Administration. With a passion for building secure and efficient networks,
                             I am dedicated to developing my skills in network design, cybersecurity, and systems management.
                             Here, you can explore my projects, skills, and experiences that showcase my journey 
                             in the world of IT. I’m excited about the future of technology and eager to contribute to innovative solutions.
