--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                     <p class="portfolio__description">The logo features a playful puppet with oversized eyes and a big smile, using vibrant colors like red, yellow, and blue.
                         Rounded, fun typography complements the design, which includes strings to emphasize the puppetry theme.
                         Overall, it blends modern and whimsical styles, appealing to both children and adults.</p>
-                    <a href="packages/Ilagan Harvey D. - Midterm_ Branding.pptx.pdf" class="button button--flex button--small portfolio__button">
+                    <a href="packages/Ilagan_Harvey_D- Logo Activity 2.ai" class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
                     </a>
