--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-analytics skills__icon"></i>
                                <div>
-                                   <h1 class="skills__title">Data Analyst</h1>
+                                   <h1 class="skills__title">Adobe Creative Suite</h1>
                                    <span class="skills__subtitle">More than 2 years</span>
                                </div>
 
@@ -186,7 +186,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Python</h3>
+                                        <h3 class="skills__name">Illustrator</h3>
                                         <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -195,7 +195,7 @@
                                 </div>
                                <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">Tableau</h3>
+                                       <h3 class="skills__name">Photoshop</h3>
                                        <span class="skills__number">70%</span>
                                    </div>
                                    <div class="skills__bar">
@@ -204,7 +204,7 @@
                                </div>
                                <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">SQL</h3>
+                                       <h3 class="skills__name">Adobe XD/Figma</h3>
                                        <span class="skills__number">50%</span>
                                    </div>
                                    <div class="skills__bar">
@@ -213,7 +213,7 @@
                                </div>
                                <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">Google Suite</h3>
+                                       <h3 class="skills__name">Adobe Premiere</h3>
                                        <span class="skills__number">70%</span>
                                    </div>
                                    <div class="skills__bar">
@@ -227,7 +227,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-money-bill skills__icon"></i>
                                <div>
-                                   <h1 class="skills__title">Network Administration</h1>
+                                   <h1 class="skills__title">Network Administrator</h1>
                                    <span class="skills__subtitle">More than 3 years</span>
                                </div>
 
@@ -316,7 +316,7 @@
                                </div>
                                <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">C# (C-Sharp)</h3>
+                                       <h3 class="skills__name">SQL</h3>
                                        <span class="skills__number">70%</span>
                                    </div>
                                    <div class="skills__bar">
