--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169; H. Ilagan | © Copyright All rights reserved.</p>
+            <p class="footer__copy">Copyright &#169; 2024 | H. Ilagan All rights reserved.</p>
         </div>
     </footer>
 
