--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                 <!--==================== QUALIFICATION 1 ====================--> 
                 <div class="qualification__data">
                     <div>
-                        <h3 class="qualification__title">Laguna State Polytechnic University </h3>
-                        <span class="qualification__subtitle">Siniloan, Laguna</span>
+                        <h3 class="qualification__title">Bachelor of Science Information Technology</h3>
+                        <span class="qualification__subtitle">Laguna State Polytechnic University - Siniloan, Laguna</span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
                             2021-2025
@@ -376,11 +376,11 @@
                     </div>
 
                     <div>
-                        <h3 class="qualification__title">Santa Maria Integrated High School</h3>
-                        <span class="qualification__subtitle">Santa Maria, Laguna</span>
+                        <h3 class="qualification__title">Technical Vocational Livelihood</h3>
+                        <span class="qualification__subtitle">Santa Maria Integrated High School - Santa Maria, Laguna</span>
                         <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
-                        2013 - 2019
+                        2017 - 2019
                         </div>
                     </div>
                 </div> 
