--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <!--==================== QUALIFICATION 1 ====================--> 
                 <div class="qualification__data">
                     <div>
-                        <h3 class="qualification__title">Bachelor of Science Information Technology</h3>
+                        <h3 class="qualification__title">Bachelor Degree - Major in Network Administration</h3>
                         <span class="qualification__subtitle">Laguna State Polytechnic University - Siniloan, Laguna</span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -376,7 +376,7 @@
                     </div>
 
                     <div>
-                        <h3 class="qualification__title">Technical Vocational Livelihood</h3>
+                        <h3 class="qualification__title">Technical Vocational Livelihood - Cookery, Food & Beverages Services and Bread & Pastry</h3>
                         <span class="qualification__subtitle">Santa Maria Integrated High School - Santa Maria, Laguna</span>
                         <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
