--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     </div>
 
                     <div>
-                        <h3 class="qualification__title">Technical Vocational Livelihood - Cookery, Food & Beverages Services and Bread & Pastry</h3>
+                        <h3 class="qualification__title">Technical Vocational Livelihood - Cookery, Food & Beverages Services and Bread & Pastry Production</h3>
                         <span class="qualification__subtitle">Santa Maria Integrated High School - Santa Maria, Laguna</span>
                         <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
