--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="home__data">
                                 <h1 class="home__title">Hi, I'am Harvey</h1>
                                 <h3 class="home__subtitle">IT Student</h3>
-                                <p class="home__description"> an enthusiastic IT student major in network administration.
+                                <p class="home__description">Major in network administration.
                                     This portfolio showcases my projects, skills, and passion for technology.
                                     I’m excited to share my journey in building and troubleshooting networks, and I invite you to explore my work. Let’s connect!</p>
                                 <a href="#contact" class="button button--flex home__button">
